--- a/inst/tutorials/fourtests/fourtests.Rmd
+++ b/inst/tutorials/fourtests/fourtests.Rmd
@@ -1,4 +1,4 @@
----ew
+---
 title: "Four Statistical Tests"
 author: John Ashley Burgoyne
 output: learnr::tutorial
@@ -46,10 +46,11 @@ contains eight columns.
 
 Use the box below to view the raw data.
 
-```{r billboard_view, exercise = TRUE}
+```{r bboard, exercise = TRUE}
+# Enter your code here.
 ```
 
-```{r billboard_view-solution}
+```{r bboard-solution}
 billboard
 ```
 
